test/libsolidity/syntaxTests/errors/panic_reserved_name.sol
error Panic(bytes2);
// ----
// SyntaxError 1855: (0-20='error Panic(bytes2);'): The built-in errors "Error" and "Panic" cannot be re-defined.
